respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Item_Program__c.object
<CustomObject>
    <fields>
        <fullName>Factory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factory Line</label>
        <referenceTo>NEU_Factory__c</referenceTo>
        <relationshipLabel>Make Programs</relationshipLabel>
        <relationshipName>Items_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Make Programs</relationshipLabel>
        <relationshipName>Items_Program</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sourcing_Item__c.Subfamily__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subfamily__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Make Programs</relationshipLabel>
        <relationshipName>Labor_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominal_Speed_units_min__c</fullName>
        <label>Nominal Speed (units/min)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEE__c</fullName>
        <label>OEE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Units_Item__c</fullName>
        <label>Production Units / Item</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection__c</fullName>
        <label>% Rejection</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_N__c</fullName>
        <label>Step Nº</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subfamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subfamily</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subfamily__c.Product_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.Family__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subfamily__c</referenceTo>
        <relationshipName>Items_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workcell__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workcell</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Workcell__c.Factory__c</field>
                <operation>equals</operation>
                <valueField>$Source.Factory_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Workcell__c</referenceTo>
        <relationshipName>Labor_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Make Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Step_N__c</columns>
        <columns>Family__c</columns>
        <columns>Subfamily__c</columns>
        <columns>Item__c</columns>
        <columns>Factory_Line__c</columns>
        <columns>Workcell__c</columns>
        <columns>Production_Units_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Make Program Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Make Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>